--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -1,13 +1,13 @@
 <% content_for :header_tags do %>
     <%= stylesheet_link_tag 'timespent', :plugin => 'redmine_monthchart' %>
     <%= stylesheet_link_tag 'colorbox', :plugin => 'redmine_monthchart' %>
- <!--   <%= javascript_include_tag 'jquery.min.js', :plugin => 'redmine_monthchart' %>
-    <%= javascript_include_tag 'jquery.colorbox.js', :plugin => 'redmine_monthchart' %>
-   -->
-<% end %>
-<!--<script>
+    
+    <%= javascript_include_tag 'jquery.min.js', :plugin => 'redmine_monthchart' %>
+    <%= javascript_include_tag 'jquery.colorbox-min.js', :plugin => 'redmine_monthchart' %>
+    <script>
  jQuery.noConflict();
-</script> -->
+</script>
+<% end %>
 <center>
 <div class="calendar-container">
 <%= render :partial => 'calmain',:locals => {:calendar => @calendar, :month => @month, :year => @year}%>
